// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Register.vue has the expected html structure 1`] = `
<main-panel-stub>
  <template>
    <div
      class="content-column"
    >
      <h1
        class="title"
      >
        Climate Monitor
      </h1>
       
      <h2
        class="heading"
      >
        Account Registration
      </h2>
       
      <p
        class="text"
      >
        
          Enter an email and password to register the account.
        
      </p>
       
      <register-form-stub />
       
      <router-link-stub
        class="link"
        to="/login"
      >
        Already registered? Click here to login
      </router-link-stub>
    </div>
  </template>
</main-panel-stub>
`;

exports[`Register.vue registered 1`] = `
<main-panel-stub>
  <template>
    <div
      class="content-column"
    >
      <h1
        class="title"
      >
        Climate Monitor
      </h1>
       
      <h2
        class="heading"
      >
        Account Registration
      </h2>
       
      <p
        class="text bold register-success"
      >
        
          The account has been successfully registered
        
      </p>
       
      <p
        class="text"
      >
        
          Complete the setup instructions to start using the climate monitor
          system.
        
      </p>
       
      <ol
        class="ordered-list"
      >
        <li>
          <p
            class="text"
          >
            
              Save the reset token below into a safe location such as in a
              text file or on paper. This token will be required to change or
              reset the account's password.
            
          </p>
           
          <span
            class="text bold reset-token"
          >
            Reset token: 
          </span>
        </li>
         
        <li>
          <p
            class="text"
          >
            
              Connect each sensor node to their battery.
            
          </p>
        </li>
         
        <li>
          <p
            class="text"
          >
            
              Plugin each sensor node's micro usb port to a USB port with a
              USB cable to charge the node's battery until the battery level
              on the dashboard is "High".
            
          </p>
        </li>
         
        <li>
          <p
            class="text"
          >
            
              Once the sensor nodes have been fully charged place the nodes in
              the areas that will be monitored.
            
          </p>
        </li>
         
        <li>
          <p
            class="text"
          >
            
              If the sensor nodes or climate data aren't appearing in the
              dashboard move the nodes closer to the base station so that they
              can communicate.
            
          </p>
        </li>
      </ol>
       
      <router-link-stub
        class="link"
        to="/dashboard"
      >
        Completed the setup? Click here to view the dashboard
      </router-link-stub>
    </div>
  </template>
</main-panel-stub>
`;
